here goes ur face

--- a/structure.css
+++ b/structure.css
@@ -40,6 +40,13 @@ header {
     }
 }
 @media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+
     .navbar-static-top {
         position: fixed;
         top: 0;
